Imager release history.  Older releases can be found in Changes.old

Imager 0.78 - unreleased
===========

Bug fixes:

 - don't access deprecated members of the png_structp.
   https://rt.cpan.org/Ticket/Display.html?id=60242

 - document that using color objects is faster than supplying colors
   by name, etc.
   https://rt.cpan.org/Ticket/Display.html?id=61047

Imager 0.77_02 - 27 Sep 2010
==============

 - moved Win32, FreeType 2 font support into sub-modules.
   https://rt.cpan.org/Ticket/Display.html?id=49616 (partial)
   Uses Imager::Probe now.
   https://rt.cpan.org/Public/Bug/Display.html?id=61328

 - tested successfully with jpeg-8b
   https://rt.cpan.org/Ticket/Display.html?id=60221

Bug fixes:

 - from _01: look for missing file support test files in the right
   places.

 - flood_fill() wouldn't fill the right side of a single scan-line
   fill area.
   Thanks to Nicolas Roggli for reporting this.

 - flood_fill wouldn't fill to the left edge of the image if the
   starting line didn't reach the left edge.
   Thanks to Nicolas Roggli for reporting this.

Imager 0.77_01 - 13 Sep 2010
==============

 - add each library-directory/pkgconfig/ to the pkg-config search path
   in Imager::Probe.
   Thanks to Justin Davis.
   https://rt.cpan.org/Ticket/Display.html?id=60491

 - moved GIF, TIFF, JPEG file handling code into sub-modules in
   preparation for separate distribution.
   https://rt.cpan.org/Ticket/Display.html?id=49616 (partial)

 - optimize filled box drawing (color, not fill)

Bug fixes:

 - Imager::Probe was calling ExtUtils::Liblist to initialize
   LD_RUN_PATH supplying an undefined value rather than the found
   directory.  Thanks to Justin Davis.
   https://rt.cpan.org/Ticket/Display.html?id=60491

 - only prepend ./ to font filenames when passing them to T1Lib and
   then only when it would use its search mechanisms.
   https://rt.cpan.org/Ticket/Display.html?id=60509

 - fix the cache check for the X rgb.txt loader.  This is typically